try fix overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,7 +193,7 @@ section {
   color: #012970;
   font-family: "Nunito", sans-serif;
   margin-top: 3px;
-  
+  display: inline-block;
 }
 
 /*--------------------------------------------------------------
